// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsPublicationsPerYearChart  should render component with no set class name 1`] = `
<Chart
  chartOptions={
    Object {
      "chart": Object {
        "backgroundColor": "transparent",
        "height": 320,
        "type": "column",
      },
      "legend": Object {
        "align": "right",
        "floating": true,
        "labelFormatter": [Function],
        "layout": "vertical",
        "shadow": false,
        "verticalAlign": "top",
        "x": -30,
        "y": -10,
      },
      "plotOptions": Object {
        "column": Object {
          "stacking": "normal",
        },
      },
      "series": Array [
        Object {
          "data": Array [
            0,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            75,
            1,
            1,
            2,
            3,
            0,
            2,
            5,
            3,
            1,
            4,
            0,
            1,
            3,
            0,
            2,
            3,
            6,
            3,
            4,
            9,
            4,
            13,
            9,
            10,
            3,
            4,
            5,
            7,
            0,
            1,
            0,
            0,
            0,
            1,
            5,
            1,
            1,
          ],
          "name": "Journal Article",
        },
        Object {
          "data": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            4,
            0,
            7,
            4,
            8,
            3,
            1,
            3,
            3,
            4,
            1,
            5,
            0,
            0,
            3,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
          "name": "Conference Paper",
        },
        Object {
          "data": Array [
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            5,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            0,
            0,
            7,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            3,
            17,
            0,
            0,
            0,
            0,
            0,
            1,
            0,
            2,
            4,
            1,
            0,
            3,
            0,
            0,
          ],
          "name": "Book",
        },
        Object {
          "data": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            2,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            2,
            0,
            0,
            3,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            2,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
          "name": "Conference Proceedings",
        },
        Object {
          "data": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            0,
            1,
            1,
            0,
            0,
            0,
            0,
            1,
            0,
            0,
            1,
            1,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            2,
            0,
            0,
          ],
          "extraInfoForLegend": "Thesis, Working Paper, Audio Document, Generic Document, Book Chapter, Newspaper Article",
          "name": "Other",
        },
      ],
      "title": Object {
        "text": null,
      },
      "xAxis": Object {
        "categories": Array [
          111,
          1011,
          1111,
          1121,
          1212,
          1213,
          1222,
          1223,
          1231,
          1233,
          1234,
          1901,
          1987,
          1990,
          1991,
          1992,
          1993,
          1994,
          1995,
          1996,
          1997,
          1998,
          1999,
          2000,
          2001,
          2002,
          2004,
          2005,
          2006,
          2007,
          2008,
          2009,
          2010,
          2011,
          2012,
          2013,
          2014,
          2015,
          2016,
          2017,
          2018,
          2019,
          2020,
          2022,
          2131,
          2222,
          2323,
          3424,
        ],
        "labels": Object {
          "rotation": -45,
          "y": 18,
        },
      },
      "yAxis": Object {
        "min": 0,
        "stackLabels": Object {
          "enabled": true,
        },
        "title": Object {
          "text": "Total publications",
        },
      },
    }
  }
  className=" authors-publications-per-year-chart"
/>
`;

exports[`AuthorsPublicationsPerYearChart  should render empty chart component 1`] = `
<Chart
  chartOptions={
    Object {
      "chart": Object {
        "backgroundColor": "transparent",
        "height": 320,
        "type": "column",
      },
      "legend": Object {
        "align": "right",
        "floating": true,
        "labelFormatter": [Function],
        "layout": "vertical",
        "shadow": false,
        "verticalAlign": "top",
        "x": -30,
        "y": -10,
      },
      "plotOptions": Object {
        "column": Object {
          "stacking": "normal",
        },
      },
      "series": Array [],
      "title": Object {
        "text": null,
      },
      "xAxis": Object {
        "categories": Array [],
        "labels": Object {
          "rotation": -45,
          "y": 18,
        },
      },
      "yAxis": Object {
        "min": 0,
        "stackLabels": Object {
          "enabled": true,
        },
        "title": Object {
          "text": "title",
        },
      },
    }
  }
  className="barChart authors-publications-per-year-chart"
/>
`;
